# oreilly-python-beyond-basics

./: .gitignore  README.md  countries_name.csv  countries_name.txt  countries_name_geo.csv  countries_name_with_geo.txt  main.py  pyproject.toml  requirements.txt
Examples/: example_2_dictionaries.py  example_4_read_file.py  example_7_requests.py
Examples/data/: google.html  output.txt
Problems/: ChatGPT20250701.md  example_beauttifulsoup_three_sisters.py  google.txt  problem_1_review.py  problem_2_dictionaries.py  problem_3_exceptions.py  problem_4_files.py  problem_5_beautiful_soup.py
Problems/Solutions/data/: google.html
Problems/data/: countries_by_letter.txt
Project/: cache_test.py  scrape_go.py  scraper.py  utc2local.py
