[project]
name = "oreilly-python-beyond basic"
version = "0.1.0"
description = "O'Reilly course on intermediate Python"
requires-python = ">=3.8"

dependencies = [
    "attrs==25.3.0",
    "beautifulsoup4==4.13.4",
    "cattrs==25.1.1",
    "certifi==2025.6.15",
    "charset-normalizer==3.4.2",
    "idna==3.10",
    "platformdirs==4.3.8",
    "pytz==2025.2",
    "requests==2.32.4",
    "requests-cache==1.2.1",
    "setuptools==78.1.1",
    "soupsieve==2.7",
    "typing-extensions==4.14.0",
    "url-normalize==2.2.1",
    "urllib3==2.5.0"
]
